--- a/src/components/deadlines/css/deadline.card.scss
+++ b/src/components/deadlines/css/deadline.card.scss
@@ -1,27 +1,27 @@
 @import '../../../css/theme';
 
-.card_root {
-	width: 20vw;
-	height: auto;
-	margin-bottom: 15px;
+.deadlinecard {
 	background-color: rgba(39, 141, 152, 0.7);
-	display: flex;
-	justify-content: space-between;
+	border-radius: 10px;
+	border: 2px solid black;
+	padding-left: 10px;
+	min-width: 720px;
+	width: 100%;
+	margin-bottom: 15px;
+	height: auto;
 
-	.card_content {
+	.card_root {
 		display: flex;
-		flex-direction: column;
-		background-color: rgba(255, 255, 255, 0.7);
-	}
+		justify-content: space-between;
 
-	.card_buttons {
-		width: 3vw;
-		background-color: grey;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		.button {
-			align-self: center;
+		.card_content {
+			display: flex;
+			align-items: center;
+		}
+
+		.card_buttons {
+			display: flex;
+			align-items: center;
 		}
 	}
 }
