--- a/src/components/sidebar/css/sidebar.css
+++ b/src/components/sidebar/css/sidebar.css
@@ -1,8 +1,8 @@
-.navbar {
+.sidebar {
   background-color: rgba(0, 0, 0, 0.3);
   color: #a1a9a7;
   width: 20vw;
   height: 100vh;
   overflow-y: hidden;
 }
-/*# sourceMappingURL=navbar.css.map */
+/*# sourceMappingURL=sidebar.css.map */
