--- a/src/components/deadlines/css/deadlines.css
+++ b/src/components/deadlines/css/deadlines.css
@@ -5,5 +5,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 /*# sourceMappingURL=deadlines.css.map */
