--- a/src/components/deadlines/css/deadlines.css
+++ b/src/components/deadlines/css/deadlines.css
@@ -10,4 +10,8 @@
       -ms-flex-direction: column;
           flex-direction: column;
 }
+
+.deadlines .accordion {
+  background-color: #46595e;
+}
 /*# sourceMappingURL=deadlines.css.map */
