--- a/src/components/sidebar/css/sidebar.scss
+++ b/src/components/sidebar/css/sidebar.scss
@@ -6,4 +6,12 @@
 	width: 20vw;
 	height: 100vh;
 	overflow-y: hidden;
+
+	.sidebar_header {
+		padding-left: 20px;
+
+		.title {
+			font-size: 20;
+		}
+	}
 }
