Pre-pull commit. Filter functions almost done

--- a/src/components/deadlines/css/deadlines.css
+++ b/src/components/deadlines/css/deadlines.css
@@ -10,4 +10,8 @@
       -ms-flex-direction: column;
           flex-direction: column;
 }
+
+.accordion {
+  background: #040505;
+}
 /*# sourceMappingURL=deadlines.css.map */
