--- a/src/components/sidebar/css/sidebar.css
+++ b/src/components/sidebar/css/sidebar.css
@@ -7,7 +7,16 @@
 }
 
 .sidebar .sidebar_header {
-  padding-left: 20px;
+  padding: 20px 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.sidebar .sidebar_header .image {
+  max-width: 30px;
+  width: 100%;
+  height: 100%;
 }
 
 .sidebar .sidebar_header .title {
