--- a/src/components/sidebar/css/sidebar.scss
+++ b/src/components/sidebar/css/sidebar.scss
@@ -8,7 +8,14 @@
 	overflow-y: hidden;
 
 	.sidebar_header {
-		padding-left: 20px;
+		padding: 20px 20px;
+		display: flex;
+
+		.image {
+			max-width: 30px;
+			width: 100%;
+			height: 100%;
+		}
 
 		.title {
 			font-size: 20;
