--- a/src/components/sidebar/css/sidebar.option.scss
+++ b/src/components/sidebar/css/sidebar.option.scss
@@ -14,10 +14,7 @@
 	color: $text;
 	.sidebarOption--active {
 		background-color: $hover;
-		@include trans();
-		h2 {
-			@include trans();
-		}
+		color: black;
 	}
 	&:hover {
 		background-color: $hover;
